--- a/SmallSpacesLafayette/Base.lproj/Main.storyboard
+++ b/SmallSpacesLafayette/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="222"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oZN-yc-ZNj">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oZN-yc-ZNj">
                                 <rect key="frame" x="270" y="298" width="93" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Show on Map"/>
@@ -138,7 +138,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKp-ii-hmy">
-                                <rect key="frame" x="20" y="336" width="335" height="259"/>
+                                <rect key="frame" x="20" y="336" width="335" height="274"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -162,23 +162,24 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="gKp-ii-hmy" firstAttribute="top" secondItem="D33-Sk-Zep" secondAttribute="bottom" constant="4" id="2fV-ng-YUi"/>
                             <constraint firstItem="gCc-hZ-CLw" firstAttribute="trailing" secondItem="Qek-jp-52B" secondAttribute="trailing" id="7kF-kf-nx1"/>
-                            <constraint firstItem="gKp-ii-hmy" firstAttribute="top" secondItem="D33-Sk-Zep" secondAttribute="bottom" constant="4" id="Cs5-X9-o8e"/>
                             <constraint firstItem="oZN-yc-ZNj" firstAttribute="top" secondItem="Qek-jp-52B" secondAttribute="bottom" constant="12" id="LKF-aa-sQ6"/>
                             <constraint firstItem="D33-Sk-Zep" firstAttribute="top" secondItem="gCc-hZ-CLw" secondAttribute="bottom" constant="12" id="MnL-X3-2lt"/>
                             <constraint firstItem="oZN-yc-ZNj" firstAttribute="leading" secondItem="D33-Sk-Zep" secondAttribute="trailing" constant="76" id="P0O-Ke-Feh"/>
                             <constraint firstItem="Qek-jp-52B" firstAttribute="leading" secondItem="dOb-HA-dc8" secondAttribute="leading" id="RFc-1A-E5B"/>
+                            <constraint firstItem="gKp-ii-hmy" firstAttribute="top" secondItem="oZN-yc-ZNj" secondAttribute="bottom" constant="8" symbolic="YES" id="Tps-m0-fgk"/>
+                            <constraint firstItem="gKp-ii-hmy" firstAttribute="centerX" secondItem="gCc-hZ-CLw" secondAttribute="centerX" id="ZtY-pp-HIX"/>
                             <constraint firstItem="D33-Sk-Zep" firstAttribute="leading" secondItem="dOb-HA-dc8" secondAttribute="leadingMargin" constant="4" id="a66-Gp-bE1"/>
-                            <constraint firstItem="aDA-sJ-cmF" firstAttribute="top" secondItem="gKp-ii-hmy" secondAttribute="bottom" constant="23" id="e9a-BR-aMF"/>
+                            <constraint firstItem="gKp-ii-hmy" firstAttribute="leading" secondItem="D33-Sk-Zep" secondAttribute="leading" id="bsb-2a-idj"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oZN-yc-ZNj" secondAttribute="trailing" constant="-4" id="fIl-IP-cl8"/>
                             <constraint firstItem="D33-Sk-Zep" firstAttribute="top" secondItem="oZN-yc-ZNj" secondAttribute="top" id="lSH-sp-0ts"/>
                             <constraint firstItem="aDA-sJ-cmF" firstAttribute="top" secondItem="Qek-jp-52B" secondAttribute="bottom" constant="332" id="ljB-2u-ixL"/>
                             <constraint firstItem="gCc-hZ-CLw" firstAttribute="leading" secondItem="Qek-jp-52B" secondAttribute="leading" id="o4l-cX-Cz6"/>
                             <constraint firstAttribute="trailing" secondItem="Qek-jp-52B" secondAttribute="trailing" id="qDQ-ea-Pcm"/>
-                            <constraint firstItem="gKp-ii-hmy" firstAttribute="centerX" secondItem="Qek-jp-52B" secondAttribute="centerX" id="qOM-kt-gqT"/>
                             <constraint firstItem="Qek-jp-52B" firstAttribute="top" secondItem="Jrg-ce-TKo" secondAttribute="bottom" id="rtE-d8-qfW"/>
-                            <constraint firstItem="D33-Sk-Zep" firstAttribute="leading" secondItem="gKp-ii-hmy" secondAttribute="leading" id="sw1-Dx-ZZP"/>
                             <constraint firstItem="gCc-hZ-CLw" firstAttribute="top" secondItem="Qek-jp-52B" secondAttribute="top" id="u0U-3F-QQ6"/>
+                            <constraint firstItem="aDA-sJ-cmF" firstAttribute="top" secondItem="gKp-ii-hmy" secondAttribute="bottom" constant="8" symbolic="YES" id="y6p-A4-4TW"/>
                         </constraints>
                     </view>
                     <connections>
