--- a/SmallSpacesLafayette/Base.lproj/Main.storyboard
+++ b/SmallSpacesLafayette/Base.lproj/Main.storyboard
@@ -143,12 +143,6 @@
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCc-hZ-CLw">
-                                <rect key="frame" x="0.0" y="64" width="375" height="222"/>
-                                <connections>
-                                    <segue destination="fCW-Gr-led" kind="show" identifier="showLargerImage" id="Xpg-te-kTH"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="D33-Sk-Zep">
                                 <rect key="frame" x="20" y="298" width="174" height="34"/>
                                 <constraints>
@@ -159,6 +153,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCc-hZ-CLw">
+                                <rect key="frame" x="-20" y="81" width="375" height="222"/>
+                                <connections>
+                                    <segue destination="fCW-Gr-led" kind="show" identifier="showLargerImage" id="Xpg-te-kTH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
